cut event